app/assets/stylesheets/style.css
body {
  padding-top: 50px;
  background: url(../assets/debut_dark.png) repeat;
}

chart {
    display: block;
    width:400px;
    height:200px;
}

#perfGraph {
    width: 600px;
    height: 150px;
    text-align: center;
    margin: 0 auto;
}

.box {
    background-color: whitesmoke;
    min-height: 100px;
    padding: 0 19px;
    margin-top: 30px;
    border: 1px solid #e3e3e3;
    -webkit-border-radius:4px;
    moz-border-radius:4px;
    border-radius:4px;
}

.btn-action {
	margin: 0px 10px 0px 0px;
}

@-webkit-viewport   { width: device-width; }
@-moz-viewport      { width: device-width; }
@-ms-viewport       { width: device-width; }
@-o-viewport        { width: device-width; }
@viewport           { width: device-width; }

.help-block-sm {
	display: block;
	margin-top: 5px;
	margin-bottom: 0px;
	color: #737373;
}

.ngGrid {
	height: 400px;
}


.btn {
    margin: 2px;
}

.btn-img-sm {
    height: 10px;
    vertical-allign: text-top;
}

/*
 * Callouts
 *
 * Not quite alerts, but custom and helpful notes for folks reading the docs.
 * Requires a base and modifier class.
 */

/* Common styles for all types */
.bs-callout {
  margin: 20px 0;
  padding: 20px;
  border-left: 3px solid #eee;
}
.bs-callout h4 {
  margin-top: 0;
  margin-bottom: 5px;
}
.bs-callout p:last-child {
  margin-bottom: 0;
}

/* Variations */
.bs-callout-danger {
  background-color: #fdf7f7;
  border-color: #eed3d7;
}
.bs-callout-danger h4 {
  color: #b94a48;
}
.bs-callout-warning {
  background-color: #faf8f0;
  border-color: #faebcc;
}
.bs-callout-warning h4 {
  color: #c09853;
}
.bs-callout-info {
  background-color: #f4f8fa;
  border-color: #bce8f1;
}
.bs-callout-info h4 {
  color: #3a87ad;
}

.modalNotification {
  height: 23px;
  margin-bottom: 10px;
}


@media(min-width:405px) {
  .form-inline-sm .form-group {
  display: inline-block;
  margin-bottom: 0;
  vertical-align: middle;
}



/* Table Styling */
.odd, .odd  {
  background-color: #F0F0F0;
}
.even, .even {
  background-color: #FDFDFD;
}

.rotate {
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  -o-transform: rotate(-90deg);
  transform: rotate(-90deg);

  /* also accepts left, right, top, bottom coordinates; not required, but a good idea for styling */
  -webkit-transform-origin: 50% 50%;
  -moz-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  -o-transform-origin: 50% 50%;
  transform-origin: 50% 50%;

  /* Should be unset in IE9+ I think. */
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
  width: 200px;
  position: absolute;
  left: -80px;
  bottom: 0px;
  z-index: 101;
}

.rotate2 {
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  -o-transform: rotate(-90deg);
  transform: rotate(-90deg);

  /* also accepts left, right, top, bottom coordinates; not required, but a good idea for styling */
  -webkit-transform-origin: 50% 50%;
  -moz-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  -o-transform-origin: 50% 50%;
  transform-origin: 50% 50%;

  /* Should be unset in IE9+ I think. */
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
  width: 200px;
  position: absolute;
  bottom: 40px;
  left: -85px;
  z-index: 101;
}

.inputbox {
	background-color: inherit;
	padding-left: 5px;
	border: none;
}

.group:before,
.group:after {
    content:"";
    display:table;
}
.group:after {
    clear:both;
}
.group {
    zoom:1; /* For IE 6/7 (trigger hasLayout) */
}


/* Assessment styling */
.assessment-view {
  width: 100%;
  overflow-y: hidden;
  overflow-x: scroll;
  display: none;
}

.assessment1-heading-space {
  position: relative;
  float: left;
  width: 188px;
  z-index: 150;
}

.assessment1-heading-space-cover {
    border: 1px solid whitesmoke;
    position: absolute;
    float: left;
    width: 189px;
    height: 148px;
    z-index: 200;
    background-color: whitesmoke;
    margin-top: -1px;
    border-right-style: solid;
    border-right-color: black;
    border-right-width: 1px;
    border-bottom: 1px solid black;
}

.assessment1-criterion-name {
  border: 1px solid black;
  position: relative;
  /*background-color: #EEEEEE;*/
  text-align: center;
  white-space: nowrap;
  padding-left: 12px;
  padding-right: 12px;
}

.assessment2-criterion-name {
  background-color: #EEEEEE;
}

.assessment1-student {
  border: 1px solid black;
  overflow: hidden;
  position: relative;
}

.assessment1-student-name {
    border-left: 1px solid black;
    border-right: 1px solid black;
    width: 15px;
    height: 32px;
    float: left;
    left: 35px;
    position: absolute;
    z-index: 200;
    width: 140px;
    background-color: inherit;
    overflow: hidden;
    text-align: right;
    padding-right: 7px;
    padding-top: 5px;
}

.scoreHorizLeft {
	height: 32px;
	left: 174px;
	min-width: 50px;
	z-index: 200;
	width: 50px;

	position: absolute;
	border-left: 1px solid black;
    border-right: 1px solid black;
	text-align: center;
}

.assessment2-criterion-name {
    padding-left: 5px;
}

.assessment-criterion {
  border: 1px solid black;
  width: 45px;
  height: 30px;
}

.assessment-criterion-input {
  width: 100%;
  height: 30px;
  text-align: center;
  margin: 0px;
}

.table-end {
  clear: both;
}

.assessment-heading-space-name, assessment-heading-space-subject {
  height:150px;
  width: 30px;
}

.assessment-heading-space-criterion {
  width: 150px;
}

.assessment-heading-space-assessment {
  width: 30px;
}

.assessment-relative-position {
  position: relative;
}

.assessment-header-assessment, assessment-header-name {
  /*background-color: #EEEEEE;*/
}

.assessment-label-name, assessment-label-subject {
  background-color: #AAAAAA;
  border: 1px solid black;
}

.assessment-label-row {
  background-color: #CCCCCC;
  border: 1px solid black;
}

.assessment-label-avg {
  background-color: #AAAAAA;
  border: 1px solid black;
  text-align: center;
  width: 35px;
}

.assessment-label-assessment {
  background-color: #CCCCCC;
  border: 1px solid black;
}

.assessment3-label-subject {
  border: 1px solid black;
  width: 45px;
  height: 30px;
}

.assessment-relative-left {
  position:relative;
  float: left;
}

.assessment2-name {
  height: 150px;
  background-color: #EEEEEE;
  width: 30px;
}

.assessment-black-border {
  border: 1px solid black;
}

.assessment3-label-subject {
  background-color: #AAAAAA;
  border: 1px solid black;
  width: 30px;
}

.assessment3-label-assessment {
  background-color: #CCCCCC;
  border: 1px solid black;
}

.assessment3-criterion-name {
  width: 300px;
  font-size: 9pt;
  padding-left: 5px;
  padding-right: 5px;
}

p.css-vertical-text {
	color:#333;
	border:0px solid red;
	writing-mode:lr-bt;
	-webkit-transform:rotate(-90deg);
	-moz-transform:rotate(-90deg);
	-o-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    transform: rotate(-90deg);
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
	white-space:nowrap;
	display:block;
	width: 20px;
	height:20px;
	font-weight:normal;
	margin-left: auto;
	margin-right: auto;
    margin-top: 90px;
}

.scoreHoriz {
	border: 1px solid black;
	text-align: center;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    /* display: none; <- Crashes Chrome on hover */
    -webkit-appearance: none;
    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}

.tt-dropdown-menu img {
  margin-left: 10px;
  margin-right: 3px;
}

.tt-dropdown-menu h5 {
  font-weight: bold;
}


.btn-modal-new-view1 {
  margin-left: -15px;
}

.criterion-modal-label-view1 {
	margin-left: 72px;
}

.max-modal-label-view1 {
	margin-left: 350px;
}

.remove-modal-label-view1 {
	margin-left: 92px;
}

.assessment-type-name-field{
	margin-left: -13px;
}

.cancel-save-button{
	margin-right: 78px;
}

.assessment3-student-name-size {
  margin-bottom: -20px;
}

.assessment3-student-name {
  border: 1px solid black;
  position: relative;
  /*background-color: #EEEEEE;*/
  white-space: nowrap;
  padding-left: 12px;
  padding-right: 12px;
}

.assessment3-sub-assess-pos {
  margin-top: 132px;
}

.btn-full-width {
  width: 100%;
}

.btn-assessment1-save-cancel {
  height: 75px; 
  margin-right: -109px;
}

.btn-btn-width {
    width: 90.9%;
    text-align: left;
}

/* Assessment styling */
.edit-assessment {
  width: 450px;
  margin: 0 auto;
  display: none;
}

.edit-assessment-name {
  margin-left: -15px;
}

.edit-assessment-max {
  margin-left: 5px;
}

.edit-assessment-remove {
  margin-left: 0px;
}

/* Performance Page Styles */
#graph {
  width: 100%;
  height: 400px;
  margin: 20px 0px 20px 0px;
}

